# wordle

./: .rusty-hook.toml  Cargo.toml  LICENSE  LICENSE.html  README.md  install-git-hooks.ps1  install-git-hooks.sh
.git-hooks/: pre-commit  pre-push
.github/workflows/: build.yml  coverage.yml  release.yml  tests.yml
src/: dictionary.rs  game.rs  lib.rs  main.rs  word.rs  words.rs
wordle/: Cargo.toml  README.md
wordle-gui/: Cargo.toml  build.rs  create-package.ps1
wordle-gui/src/: main.rs
wordle-web/: Cargo.toml
wordle/src/: dictionary.rs  game.rs  lib.rs  main.rs  word.rs
